add_custom_target(UnitTests)
set_target_properties(UnitTests PROPERTIES FOLDER "Tests")
add_dependencies(UnitTests LLFileGeneration)

add_subdirectory(Config)
add_subdirectory(Controller)
add_subdirectory(DB)
add_subdirectory(Experimental)
add_subdirectory(Flex)
add_subdirectory(PhasarClang)
add_subdirectory(PhasarLLVM)
add_subdirectory(Utils)
