add_subdirectory(AnalysisStrategy)
add_subdirectory(ControlFlow)
add_subdirectory(DataFlowSolver)
add_subdirectory(Passes)
# Workaround: Remove Plugins for MacOS for now
if(APPLE)
else()
  add_subdirectory(Plugins)
endif()
add_subdirectory(Pointer)
add_subdirectory(TypeHierarchy)
add_subdirectory(Utils)
